feat(newsletter): ✨ implement newsletter sign-up form with validation

--- a/newsletter-sign-up-with-success-message/index.html
+++ b/newsletter-sign-up-with-success-message/index.html
@@ -1,52 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Newsletter sign-up form with validation and success message"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>
+      Frontend Mentor | Newsletter sign-up form with success message
+    </title>
+  </head>
+  <body>
+    <main class="container">
+      <!-- Sign-up form section -->
+      <section class="newsletter" aria-labelledby="newsletter-title">
+        <div class="newsletter__content">
+          <h1 id="newsletter-title" class="newsletter__title">Stay updated!</h1>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
+          <p class="newsletter__description">
+            Join 60,000+ product managers receiving monthly updates on:
+          </p>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+          <ul class="newsletter__features">
+            <li class="newsletter__feature">
+              Product discovery and building what matters
+            </li>
+            <li class="newsletter__feature">
+              Measuring to ensure updates are a success
+            </li>
+            <li class="newsletter__feature">And much more!</li>
+          </ul>
 
-  <!-- Sign-up form start -->
+          <form class="form" id="newsletter-form" novalidate>
+            <div class="form__group">
+              <div class="form__label-container">
+                <label for="email" class="form__label">Email address</label>
+                <span class="form__error-message" aria-live="polite"></span>
+              </div>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                class="form__input"
+                placeholder="email@company.com"
+                required
+                aria-describedby="email-error"
+              />
+              <div id="email-error" class="sr-only"></div>
+            </div>
 
-  Stay updated!
+            <button type="submit" class="btn btn--primary">
+              Subscribe to monthly newsletter
+            </button>
+          </form>
+        </div>
 
-  Join 60,000+ product managers receiving monthly updates on:
+        <div class="newsletter__image">
+          <!-- Image will be switched via CSS based on viewport width -->
+          <picture>
+            <source
+              media="(min-width: 768px)"
+              srcset="./assets/images/illustration-sign-up-desktop.svg"
+            />
+            <img
+              src="./assets/images/illustration-sign-up-mobile.svg"
+              alt="Newsletter illustration showing various interface elements and graphics"
+              width="100%"
+              height="auto"
+              loading="eager"
+            />
+          </picture>
+        </div>
+      </section>
 
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
+      <!-- Success message section (hidden by default) -->
+      <section class="success" aria-labelledby="success-title" hidden>
+        <div class="success__icon">
+          <img
+            src="./assets/images/icon-success.svg"
+            alt=""
+            aria-hidden="true"
+            width="64"
+            height="64"
+          />
+        </div>
 
-  Email address
-  email@company.com
+        <h2 id="success-title" class="success__title">
+          Thanks for subscribing!
+        </h2>
 
-  Subscribe to monthly newsletter
+        <p class="success__message">
+          A confirmation email has been sent to
+          <span id="confirmed-email" class="success__email"
+            >email@company.com</span
+          >. Please open it and click the button inside to confirm your
+          subscription.
+        </p>
 
-  <!-- Sign-up form end -->
+        <button type="button" class="btn btn--primary" id="dismiss-button">
+          Dismiss message
+        </button>
+      </section>
+    </main>
 
-  <!-- Success message start -->
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#" target="_blank">Your Name Here</a>.
+    </footer>
 
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
