feat(success-message): ✨ implement success message display with backdrop

--- a/newsletter-sign-up-with-success-message/index.html
+++ b/newsletter-sign-up-with-success-message/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <main class="container">
+      <div class="backdrop" id="backdrop"></div>
       <!-- Sign-up form section -->
       <section class="newsletter" aria-labelledby="newsletter-title">
         <div class="newsletter__content">
