feat(tech-book-club-landing-page): ✨ implement ui components and design

--- a/index.html
+++ b/index.html
@@ -1,40 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Steven's Profile</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="./social-links-profile-main/assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-  <main class="profile-card">
-    <section class="profile-card__avatar-section">
-      <figure class="profile-card__avatar">
-        <img
-          src="./avatar.png"
-          alt="Steven's avatar"
-          class="profile-card__avatar-image"
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Steven's Profile</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./social-links-profile-main/assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <main class="profile-card">
+      <section class="profile-card__avatar-section">
+        <figure class="profile-card__avatar">
+          <img
+            src="./avatar.png"
+            alt="Steven's avatar"
+            class="profile-card__avatar-image"
+          />
+        </figure>
+      </section>
+
+      <section class="profile-card__info">
+        <h1 class="profile-card__name">Steven To</h1>
+        <p class="profile-card__location">Ho Chi Minh, Vietnam</p>
+        <p class="profile-card__bio">
+          "Front-end developer and Ironman 70.3 finisher."
+        </p>
+      </section>
+
+      <nav class="profile-card__social-links">
+        <a
+          href="https://github.com/stevensuna"
+          class="profile-card__link profile-card__link--github"
+          >GitHub</a
         >
-      </figure>
-    </section>
-
-    <section class="profile-card__info">
-      <h1 class="profile-card__name">Steven To</h1>
-      <p class="profile-card__location">Ho Chi Minh, Vietnam</p>
-      <p class="profile-card__bio">"Front-end developer and Ironman 70.3 finisher."</p>
-    </section>
-
-    <nav class="profile-card__social-links">
-      <a href="https://github.com/stevensuna" class="profile-card__link profile-card__link--github">GitHub</a>
-      <a href="https://www.frontendmentor.io/profile/stevensuna" class="profile-card__link profile-card__link--frontend-mentor">Frontend Mentor</a>
-      <a href="https://github.com/stevensuna/fem" class="profile-card__link profile-card__link--linkedin">Show Case</a>
-      <a href="#" class="profile-card__link profile-card__link--twitter">Twitter</a>
-      <a href="#" class="profile-card__link profile-card__link--instagram">Instagram</a>
-    </nav>
-  </main>
-</body>
+        <a
+          href="https://www.frontendmentor.io/profile/stevensuna"
+          class="profile-card__link profile-card__link--frontend-mentor"
+          >Frontend Mentor</a
+        >
+        <a
+          href="https://github.com/stevensuna/fem"
+          class="profile-card__link profile-card__link--linkedin"
+          >Show Case</a
+        >
+        <a href="#" class="profile-card__link profile-card__link--twitter"
+          >Twitter</a
+        >
+        <a href="#" class="profile-card__link profile-card__link--instagram"
+          >Instagram</a
+        >
+      </nav>
+    </main>
+  </body>
 </html>
